--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ tasks.named('test') {
 }
 
 jar {
+    enabled = false
     manifest {
         attributes(
-                'Main-Class': 'com.gfa.test.TestApplication',
-                'Class-Path': '/libs/test-0.0.1-SNAPSHOT.jar'
+                'Main-Class': 'com.gfa.test.TestApplication'
         )
     }
 }
